--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ body {
     font-size: 14px;
     color: var(--primary-text-color);
     background-color: var(--primary-bg);
+    letter-spacing: 0.03em;
 }
 .visually-hidden {
     position: absolute;
@@ -94,8 +95,7 @@ section {
     font-family: var(--secondary-text-font);
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.19;   
-    letter-spacing: 0.03em;    
+    line-height: 1.19;       
     color: var(--logo-text-color);
 
     margin-right: 93px;
@@ -221,7 +221,6 @@ section {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 0.03em;
     text-transform: uppercase;
 
     margin-bottom: 10px;
@@ -238,7 +237,6 @@ section {
 .benefits-text {
     font-weight: 400;
     line-height: 1.71;
-    letter-spacing: 0.03em;
     color:var(--secondary-text-color);
 }
 .benefit-icon {
@@ -265,7 +263,6 @@ section {
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
-    letter-spacing: 0.03em;
     margin-bottom: 50px;
 }
 .service-item {
@@ -285,7 +282,6 @@ section {
     
     font-weight: 700;
     line-height: 1.14;
-    letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--hero-text-color);
 }
@@ -316,7 +312,6 @@ section {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
-    letter-spacing: 0.03em;
     text-align: center;
         
     margin-bottom: 10px;
@@ -325,7 +320,6 @@ section {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.19;
-    letter-spacing: 0.03em;
     text-align: center;
     color: var(--secondary-text-color);
     margin-bottom:16px;
@@ -390,11 +384,11 @@ section {
 .footer-adress-container {
     margin-right: 70px;
 }
+
 .footer-social-title {
     font-family: 'Roboto';
     font-weight: 700;
     line-height: 1.14;
-    letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--hero-text-color);
     margin-bottom: 20px;
@@ -446,7 +440,6 @@ section {
     font-style: normal;
     font-weight: 400;
     line-height: 1.71;
-    letter-spacing: 0.03em;
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
@@ -462,6 +455,66 @@ section {
 .contact-below:hover,
 .contact-below:focus {
     color: var(--link-text-color);
+}
+.footer-social-container {
+    margin-right: 93px;
+}
+
+/* FOOTER FORM */
+.footer-form-tittle {
+    font-weight: 700;
+        line-height: 1.14;
+        text-transform: uppercase;
+        color: var(--hero-text-color);
+
+        display: block;
+        margin-bottom: 20px;
+}
+.footer-form {
+    display: flex;
+    gap: 12px;
+}
+.tittle-form-btn {    
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color: var(--hero-text-color);
+}
+.footer-form-input {
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    padding-left: 16px;
+    background-color: transparent;
+}
+.footer-form-input::placeholder {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.25;
+        letter-spacing: 0.03em;
+    
+        color: rgba(255, 255, 255, 0.6);
+}
+.footer-form-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    width: 200px;
+    height: 50px;
+    background-color: var(--link-text-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border-style: none;
+    
+    cursor: pointer;
+    padding: 0;
+}
+.footer-form-icon {
+    fill: var(--primary-bg)
 }
 /* МОДАЛЬНЕ ВІКНО */
 .backdrop {
@@ -505,11 +558,130 @@ section {
     border-radius: 50%;
     border: 1px solid rgb(0, 0, 0, 10%);
 
+    transition: var(--animation);
+
     display: flex;
     justify-content: center;
     align-items: center;
+
+}
+.close-mdl-btn:focus,
+.close-mdl-btn:hover {
+    fill: var(--link-text-color)
+}
+/* MODAL FORM */
+input:focus-visible,
+textarea:focus-visible {
+    outline: none;
+}
+.modal-form {
+    padding: 40px;
+}
+.modal-form-label {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;  
+}
+.modal-form-label input {  
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.534);
+    border-radius: 4px;
+    padding-left: 42px;
+    transition: var(--animation)
+}
+.modal-form-label:focus-within input,
+.modal-form-label:focus-within textarea {
+    border: 1px solid var(--link-text-color);
 }
 
+
+.modal-form-label textarea {
+    height: 120px;
+    resize: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding: 12px 16px;
+    transition: var(--animation);
+}
+.modal-form-label textarea::placeholder {
+    font-weight: 400;
+        font-size: 12px;
+        line-height: calc(14/12);
+        letter-spacing: 0.01em;
+    
+        color: rgba(117, 117, 117, 0.5);
+}
+.modal-tittle {
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.15;
+        text-align: center;
+    
+        margin-bottom: 12px;
+}
+.modal-form-label span {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.17;
+        margin-bottom: 4px;
+          
+        letter-spacing: 0.01em;
+    
+        color: var(--secondary-text-color);
+}
+.modal-input-icon {
+    position: absolute;
+    bottom: 11px;
+    left: 12px;
+}
+.modal-form-label:focus-within .modal-input-icon {
+    fill: var(--link-text-color)
+}
+.form-agreement {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+    gap: 7px;
+}
+.form-checkbox {
+    appearance: none;
+    cursor: pointer;
+    width: 16px;
+    height: 15px;
+    background-image: url("data:image/svg+xml,%3Csvg width='16' height='15' viewBox='0 0 16 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='16' height='15' rx='2' /%3E%3Cpath d='M3.95703 7.75166L3.88825 7.68604L3.81923 7.75141L2.93123 8.59258L2.85486 8.66492L2.93097 8.73753L6.42671 12.0724L6.49574 12.1382L6.56476 12.0724L14.069 4.91352L14.1449 4.84116L14.069 4.76881L13.1873 3.92764L13.1183 3.86183L13.0493 3.92761L6.49577 10.1735L3.95703 7.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E%0A");
+    background-size: 0;
+    border: 2px solid var(--primary-text-color);
+    
+    transition-property: background-size, background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-checkbox:checked {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    border-color: transparent;
+    background-color: var(--link-text-color);
+}
+.form-agreement-text {
+    
+        line-height: 1.71;
+        color: var(--secondary-text-color);
+
+}
+.form-agreement-link {
+    font-weight: 400;
+    line-height: 1.71;
+            
+    color: var(--link-text-color);
+}
+.modal-form-btn {
+    display: block;
+    margin: 0 auto;
+    
+}
 /* Page 2 - portfolio */
 
 .progects-btn-list {
@@ -591,7 +763,6 @@ section {
     font-weight: 400;
     font-size: 18px;
     line-height: 1.56;
-    letter-spacing: 0.03em;
     color: var(--hero-text-color);
     padding: 63px 24px;
 }
@@ -610,6 +781,5 @@ section {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
-    letter-spacing: 0.03em;
     color: var(--secondary-text-color);
 }
